registered service worker

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://yashrajb.github.io/Robofriends-PWA",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.3",
@@ -15,6 +16,8 @@
     "why-did-you-update": "^0.1.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
