--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,11 @@
       "src": "icon.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src":"icon-310x310.png",
+      "size":"310x310",
+      "type":"image/png"
     }
   ],
   "start_url": ".",
