--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,18 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "favicon.ico",
+      "sizes": "16x16 32x32",
+      "type": "image/x-icon"
     },
     {
-      "src":"icon-310x310.png",
-      "size":"310x310",
+      "src":"android=chrome-192x192.png",
+      "size":"192x192",
+      "type":"image/png"
+    },
+    {
+      "src":"android=chrome-512x512.png",
+      "size":"512x512",
       "type":"image/png"
     }
   ],
